[ADD]: automatic config generation

--- a/lab1/frrlab1_1.yml
+++ b/lab1/frrlab1_1.yml
@@ -6,31 +6,37 @@ topology:
       image: frrouting/frr:latest
       binds:
         - router1/daemons:/etc/frr/daemons
+        - router1/frr.conf:/etc/frr/frr.conf
     router2:
       kind: linux
       image: frrouting/frr:latest
       binds:
         - router2/daemons:/etc/frr/daemons
+        - router2/frr.conf:/etc/frr/frr.conf
     router3:
       kind: linux
       image: frrouting/frr:latest
       binds:
         - router3/daemons:/etc/frr/daemons
+        - router3/frr.conf:/etc/frr/frr.conf
     PC1:
      kind: linux
      image: frrouting/frr:latest
      binds:
         - PC1/daemons:/etc/frr/daemons
+        - PC1/frr.conf:/etc/frr/frr.conf
     PC2:
      kind: linux
      image: frrouting/frr:latest
      binds:
          - PC2/daemons:/etc/frr/daemons
+         - PC2/frr.conf:/etc/frr/frr.conf
     PC3:
      kind: linux
      image: frrouting/frr:latest
      binds:
          - PC3/daemons:/etc/frr/daemons
+         - PC3/frr.conf:/etc/frr/frr.conf
   links:
     - endpoints: ["router1:eth1", "router2:eth1"]
     - endpoints: ["router1:eth2", "router3:eth1"]
